# USTB_CAR

./: .gitignore  README.md
src/: README.txt
src/Following_path/: CMakeLists.txt  package.xml
src/Following_path/include/: Following_path.h  myPoint.h
src/Following_path/src/: main.cpp  myPoint.cpp
src/Following_path/srv/: Path_para.srv
src/agv_control/: CMakeLists.txt  package.xml  readme.md
src/agv_control/config/: config.ini
src/agv_control/docs/: .~lock.AGV 小车调试汇总.pptx#  AGV 小车调试汇总.pptx
src/agv_control/src/: CMakeLists.txt  stCtrl.cc
src/agv_control/srv/: feedback.srv
src/app_show/: CMakeLists.txt  package.xml
src/app_show/scripts/: main.py  show.py
src/control_center/: CMakeLists.txt  package.xml
src/control_center/msg/: show_data.msg
src/control_center/src/: main.cpp
src/darknet/: CMakeLists.txt  darknet  package.xml  uselib
src/darknet/mkdir build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  darknet  install_manifest.txt  uselib
src/darknet/msg/: person_box.msg
src/darknet/src/: yolo_console_dll.cpp
src/data/: config.ini  control_data.json  data.txt
src/frmudpserver/: CMakeLists.txt  Makefile  frmudpserver.22  frmudpserver.9-pre1  frmudpserver.pro  main.cpp  package.xml
src/frmudpserver/api/: api.pri  app.cpp  app.h  quiwidget.cpp
src/frmudpserver/form/: INS_publisher.cpp  form.pri  frmudpserver.cpp  frmudpserver.h  frmudpserver.ui  ui_frmmain.h  ui_frmudpserver.h
src/frmudpserver/msg/: Initial_data.msg
src/joy_data/: CMakeLists.txt  package.xml
src/joy_data/msg/: control.msg  joydata.msg
src/joy_data/src/: Agv_sub.py  (+1 more)
src/sim_data/: CMakeLists.txt  package.xml
(+26 files in other folders)
